--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>ImageSlider</title>
 </head>
 
 <body>
@@ -25,18 +26,47 @@
                     fill="#34A853" /></svg>
         </span>
 
-  <span class="google-button__text">authorize and load</span>
-  </button>
+        <span class="google-button__text">authorize and load</span>
+    </button>
 
     <main class="container">
         <section class="slides-section">
+            <div class="slides-section__container">
+                <img class="slideImg" src="images/Perito-Moreno-Glacier-Argentina.jpg" alt="">
+                <img class="slideImg" src="images/famous-waterfalls-Iguazu-Waterfalls-Argentina-.jpg" alt="">
+                <img class="slideImg" src="images/grand-canyon-sunset.jpg" alt="">
+                <img class="slideImg" src="images/palmtree.jpg" alt="">
+                <img class="slideImg" src="images/western-palm-trees-mexican-fan-palms-elysian-park-0214.jpg" alt="">
+            </div>
         </section>
-        <section class="caption-container">
-            <a class="prev">&#10094;</a>
-            <a class="next">&#10095;</a>
+        <section class="thumbnail-section">
+            <div class="thumbnail">
+                <img class="demo thumbnailImg" src="images/Perito-Moreno-Glacier-Argentina.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <img class="thumbnailImg" src="images/famous-waterfalls-Iguazu-Waterfalls-Argentina-.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <img class="thumbnailImg" src="images/grand-canyon-sunset.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <img class="thumbnailImg" src="images/grand-canyon-sunset.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <img class="thumbnailImg" src="images/grand-canyon-sunset.jpg" alt="">
+            </div>
+
+
+
         </section>
-        <section id="thumbnail-section" class="row">
-        </section>
+
+        <button id="prev" class=" btn btn--prev"><span class="btn__icon material-icons">
+                  keyboard_arrow_left
+              </span></button>
+        <button id="next" class=" btn btn--next"><span class="btn__icon material-icons">
+                  keyboard_arrow_right
+              </span></button>
+
     </main>
 
 
