change to unsplash API

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </header>
     <form class="search">
         <div class="search__input">
-            <input class="search__description" type="text" id="img-search" placeholder="search photo e.g. Car" aria-label="Search photo" />
+            <input class="search__description" type="text" id="img-search" placeholder="Search photo e.g. Car" aria-label="Search photo" />
             <input class="search__number" placeholder="Number of photos" type="number" aria-label="insert value" />
         </div>
         <button type="button" class="search__btn">Generate</button>
